crates/parser/tests/cases/snapshots/cases__errors__type_desc_path_number.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(type_desc_path_number), module::parse_module,\n    \"type Foo = some::mod::Foo::5000\")"

---
error: failed to parse type description
  ┌─ type_desc_path_number:1:28
  │
1 │ type Foo = some::mod::Foo::5000
  │                          --^^^^ expected a name
  │                          │  
  │                          path delimiter


